--- a/src/components/project-txt/project-txt.scss
+++ b/src/components/project-txt/project-txt.scss
@@ -54,5 +54,8 @@
         font-size: 16px;
       }
     }
+    .project-add {
+      flex-direction: column;
+    }
   }
 }
